--- a/trunk/rules/snort.conf
+++ b/trunk/rules/snort.conf
@@ -47,7 +47,7 @@
 var HOME_NET 192.168.0.0/24
 #
 # Set up the external network addresses as well.  A good start may be "any"
-var EXTERNAL_NET any
+var EXTERNAL_NET !$HOME_NET
 #
 # Configure your server lists.  This allows snort to only look for attacks to
 # systems that have a service up.  Why look for HTTP attacks if you are not
@@ -812,7 +812,10 @@ include reference.config
 # README.alert_order for how rule ordering affects how alerts are triggered.
 #=========================================
 ##
-include emerging-all.rules
+#include emerging-all.rules
+#include http.rule
+#include depth.rule
+include suricata.rules
 
 # Include any thresholding or suppression commands. See threshold.conf in the
 # <snort src>/etc directory for details. Commands don't necessarily need to be
