--- a/trunk/rules/snort.conf
+++ b/trunk/rules/snort.conf
@@ -47,7 +47,8 @@
 var HOME_NET 192.168.0.0/24
 #
 # Set up the external network addresses as well.  A good start may be "any"
-var EXTERNAL_NET !$HOME_NET
+#var EXTERNAL_NET !$HOME_NET
+var EXTERNAL_NET any
 #
 # Configure your server lists.  This allows snort to only look for attacks to
 # systems that have a service up.  Why look for HTTP attacks if you are not
@@ -815,7 +816,8 @@ include reference.config
 #include emerging-all.rules
 #include http.rule
 #include depth.rule
-include suricata.rules
+#include suricata.rules
+include backdoor.rule
 
 # Include any thresholding or suppression commands. See threshold.conf in the
 # <snort src>/etc directory for details. Commands don't necessarily need to be
