Integrating pcre flattening and fixed large handshake bug

--- a/rules/snort.conf
+++ b/rules/snort.conf
@@ -817,7 +817,9 @@ include reference.config
 #include http.rule
 #include depth.rule
 #include suricata.rules
-include backdoor.rule
+#include backdoor.rule
+#include orig_pcre.rule
+include josh.rule
 
 # Include any thresholding or suppression commands. See threshold.conf in the
 # <snort src>/etc directory for details. Commands don't necessarily need to be
