--- a/rules/snort.conf
+++ b/rules/snort.conf
@@ -819,6 +819,7 @@ include reference.config
 #include suricata.rules
 #include backdoor.rule
 #include orig_pcre.rule
+#include eg.rules
 include josh.rule
 
 # Include any thresholding or suppression commands. See threshold.conf in the
